URLDecode URISpec fields (query/frag/username/password/paths/file).
and make sizeOf run with java 9 with module vm arguments